// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preval-extract/extractStyles module with cache disabled should append new styles to a file 1`] = `"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */"`;

exports[`preval-extract/extractStyles module with cache disabled should write (and overwrite) new styles to a file 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;

exports[`preval-extract/extractStyles module with cache enabled should append styles only once if the file has not changed 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite css if the file has changed 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite css if the file has changed 2`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #000000}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite css if the new file was added 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite css if the new file was added 2`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}
.classname{color: #000000}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite if the file has changed 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;

exports[`preval-extract/extractStyles module with cache enabled should overwrite if the file has changed 2`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #000000}"
`;

exports[`preval-extract/extractStyles module with cache enabled should write only once if the file has not changed 1`] = `
"/* THIS FILE IS AUTOGENERATED. DO NOT EDIT IT DIRECTLY, NOR COMMIT IT TO VERSION CONTROL. */
.classname{color: #ffffff}"
`;
